0.2.11

2017-11-28  Brecht Sanders  https://github.com/brechtsanders/

  * fixed bug in XML_Char_poscpy when compiled for UTF-16 (thanks to https://github.com/dsmccall)

2017-11-16  Brecht Sanders  https://github.com/brechtsanders/

  * fixed minor memory leak whean cleaning up shared string list

2017-11-11  Brecht Sanders  https://github.com/brechtsanders/

  * added wchar_t support, requires building with -DXML_UNICODE and expat also built with -DXML_UNICODE
  * fixed memory issue in xlsxioread_process()

2017-11-09  Brecht Sanders  https://github.com/brechtsanders/

  * added xlsxioread_open_filehandle() to read file using file descriptor

0.2.10

2017-10-31  Brecht Sanders  https://github.com/brechtsanders/

  * added xlsxioread_open_memory() to read file from memory buffer
  * fixed xlsxio_read_sharedstrings.c not being compiled in Makefile

0.2.9

2017-07-12  Brecht Sanders  https://github.com/brechtsanders/

  * use strcasecmp instead of stricmp
  * move shared strings functionality from xlsxio_read.c to seperate file

0.2.8

2016-10-24  Brecht Sanders  https://github.com/brechtsanders/

  * skip issue where "(null)" is written if cell data is NULL
  * limit sheet name to 31 characters

0.2.7

2016-09-03  Brecht Sanders  https://github.com/brechtsanders/

  * skip phonetic data in <rPh> tag also in shared strings

0.2.6

2016-08-31  Brecht Sanders  https://github.com/brechtsanders/

  * skip phonetic data in <rPh> tag (often used in Asian spreadsheets)

0.2.5

2016-06-28  Brecht Sanders  https://github.com/brechtsanders/

  * fix reading data from cells with mixed formatting (thanks to bcTekGuy)

2016-06-16  Brecht Sanders  https://github.com/brechtsanders/

  * use correct formula for calculating column widths
  * add -d parameter to xlsxio_csv2xlsx

0.2.4

2016-05-12  Brecht Sanders  https://github.com/brechtsanders/

  * fixed crash in xlsxioread_sheetlist_close() when parameter is NULL

0.2.3
