@@ -42,25 +42,15 @@ IF(BUILD_SHARED)
 ENDIF()
 
 FOREACH(LINKTYPE ${LINKTYPES})
-  #SET(LINKTYPEDEFINE)
-  #IF(LINKTYPE STREQUAL "STATIC")
-  #  SET(LINKTYPEDEFINE "BUILD_XLSXIO_STATIC")
-  #ENDIF()
-  #IF(LINKTYPE STREQUAL "SHARED")
-  #  SET(LINKTYPEDEFINE "BUILD_XLSXIO_DLL")
-  #ENDIF()
-  
   ADD_LIBRARY(xlsxio_read_${LINKTYPE} ${LINKTYPE} lib/xlsxio_read.c lib/xlsxio_read_sharedstrings.c)
-  #SET_TARGET_PROPERTIES(xlsxio_read_${LINKTYPE} PROPERTIES COMPILE_DEFINITIONS ${LINKTYPEDEFINE})
   SET_TARGET_PROPERTIES(xlsxio_read_${LINKTYPE} PROPERTIES COMPILE_DEFINITIONS "BUILD_XLSXIO")
-  SET_TARGET_PROPERTIES(xlsxio_read_${LINKTYPE} PROPERTIES DEFINE_SYMBOL "BUILD_XLSXIO_DLL")
+  SET_TARGET_PROPERTIES(xlsxio_read_${LINKTYPE} PROPERTIES DEFINE_SYMBOL "BUILD_XLSXIO_${LINKTYPE}")
   SET_TARGET_PROPERTIES(xlsxio_read_${LINKTYPE} PROPERTIES OUTPUT_NAME xlsxio_read)
   TARGET_INCLUDE_DIRECTORIES(xlsxio_read_${LINKTYPE} PRIVATE lib)
   TARGET_LINK_LIBRARIES(xlsxio_read_${LINKTYPE} ${LIBZIP_LIBRARIES} ${EXPAT_LIBRARIES})
   SET(ALLTARGETS ${ALLTARGETS} xlsxio_read_${LINKTYPE})
 
   ADD_LIBRARY(xlsxio_write_${LINKTYPE} ${LINKTYPE} lib/xlsxio_write.c)
-  #SET_TARGET_PROPERTIES(xlsxio_write_${LINKTYPE} PROPERTIES COMPILE_DEFINITIONS ${LINKTYPEDEFINE})
   SET_TARGET_PROPERTIES(xlsxio_write_${LINKTYPE} PROPERTIES COMPILE_DEFINITIONS "BUILD_XLSXIO")
   SET_TARGET_PROPERTIES(xlsxio_write_${LINKTYPE} PROPERTIES DEFINE_SYMBOL "BUILD_XLSXIO_DLL")
   SET_TARGET_PROPERTIES(xlsxio_write_${LINKTYPE} PROPERTIES OUTPUT_NAME xlsxio_write)
