@@ -1,7 +1,7 @@
 #ifndef INCLUDED_XLSXIO_PRIVATE_H
 #define INCLUDED_XLSXIO_PRIVATE_H
 
-#if (defined(STATIC) || defined(BUILD_XLSXIO_STATIC) || defined(BUILD_XLSXIO_STATIC_DLL) || (defined(BUILD_XLSXIO) && !defined(BUILD_XLSXIO_DLL))) && !defined(ZIP_STATIC)
+#if (defined(STATIC) || defined(BUILD_XLSXIO_STATIC) || defined(BUILD_XLSXIO_STATIC_DLL) || (defined(BUILD_XLSXIO) && !defined(BUILD_XLSXIO_DLL) && !defined(BUILD_XLSXIO_SHARED))) && !defined(ZIP_STATIC)
 #define ZIP_STATIC
 #endif
 #include <zip.h>
